@@ -1,6 +1,8 @@
 4.13.2 (unreleased)
 -------------------
 
+- Add script to wait for a Concrete service to become alive.
+
 - Add S3 fetch and store server scripts.
 
 
